# pixel-social

./: .env  .env_sample  .gitignore  16948.clinic-doctor.html  Cargo.toml  README.md  app.js  dump.rdb  package-lock.json  package.json
16948.clinic-doctor/: 16948.clinic-doctor-processstat  16948.clinic-doctor-systeminfo
frontend/mobile/: .packages  README.md  launch.json  pubspec.yaml
frontend/mobile/lib/: main.dart
frontend/mobile/lib/Views/: CommunityPage.dart  PostsPage.dart
frontend/mobile/lib/api/: PixelShareAPI.dart  PostsAPI.dart
frontend/mobile/lib/blocs/TopicBloc/: TopicBloc.dart  TopicEvent.dart  TopicState.dart
frontend/mobile/lib/components/History/: HistoryLimit.dart
frontend/mobile/lib/components/NavigationBar/: NavBarCommon.dart  NavBarDrawer.dart  TabNavBar.dart
frontend/mobile/lib/models/: Post.dart
frontend/pixel_flutter/: README.md  pubspec.yaml
frontend/pixel_flutter/lib/: env.dart  main.dart
frontend/pixel_flutter/lib/Views/: AutenticationPage.dart  CategoryPage.dart  HomePage.dart  PostsPage.dart  ProfilePage.dart  RecentMessagePage.dart  TalkPage.dart  TopicsPage.dart
frontend/pixel_flutter/lib/api/: DataBase.dart  PixelShareAPI.dart  TalkAPI.dart
frontend/pixel_flutter/lib/blocs/: AuthBlocs.dart  Blocs.dart  CategoryBlocs.dart  ErrorBlocs.dart  HorizontalTabBlocs.dart  InputBlocs.dart  MessageBlocs.dart  MyBlocDelegate.dart  Provider.dart  TopicBlocs.dart  TopicsBlocs.dart  UserBlocs.dart  VerticalTabBlocs.dart
frontend/pixel_flutter/lib/blocs/AuthBloc/: AuthBloc.dart  AuthEvent.dart  AuthState.dart  validators.dart
frontend/pixel_flutter/lib/blocs/CategoryBloc/: CategoryBloc.dart  CategoryEvent.dart  CategoryRepo.dart  CategoryState.dart
frontend/pixel_flutter/lib/blocs/ErrorBloc/: ErrorBloc.dart  ErrorEvent.dart  ErrorState.dart
frontend/pixel_flutter/lib/blocs/HorizontalTabBloc/: HorizontalTabBloc.dart  HorizontalTabEvent.dart  HorizontalTabState.dart
frontend/pixel_flutter/lib/blocs/InputBloc/: InputBloc.dart  InputEvent.dart  InputState.dart
frontend/pixel_flutter/lib/blocs/MessageBloc/: MessageBloc.dart  MessageEvent.dart  MessageState.dart
frontend/pixel_flutter/lib/blocs/RegisterBloc/: RegisterBloc.dart  RegisterEvent.dart  RegisterState.dart
frontend/pixel_flutter/lib/blocs/Repo/: CategoryRepo.dart  MessageRepo.dart  TalkRepo.dart  TopicsRepo.dart  UserRepo.dart
frontend/pixel_flutter/lib/blocs/TalkBloc/: TalkBloc.dart  TalkEvent.dart  TalkState.dart
frontend/pixel_flutter/lib/blocs/TopicBloc/: TopicBloc.dart  TopicEvent.dart  TopicRepo.dart  TopicState.dart
frontend/pixel_flutter/lib/models/: Category.dart  Message.dart  PixelShare.dart  Post.dart  Talk.dart  Topic.dart  User.dart
frontend/pixel_flutter/lib/style/: colors.dart  text.dart
frontend/pixel_flutter_web/: .flutter-plugins  pubspec.yaml
frontend/pixel_flutter_web/lib/: env.dart  main.dart
frontend/pixel_flutter_web/lib/api/: PixelShareAPI.dart
frontend/pixel_flutter_web/lib/bloc/: pubspec.yaml
frontend/pixel_flutter_web/lib/blocs/: CategoryBlocs.dart  EnvBlocs.dart  FloatingButtonBlocs.dart  RegisterBlocs.dart  TopicInputBlocs.dart  UpdateBlocs.dart
frontend/pixel_flutter_web/lib/components/: AnimatedSubmitButton.dart  AuthenticationNavBar.dart  AvatarIcon.dart  BackToTopButton.dart  BasicLayout.dart  BasicSliverPadding.dart  BottomLoader.dart  FloatingAppBar.dart  FloatingBarActionIcon.dart  GeneralBackground.dart  NewTopicButton.dart  PostTile.dart  PostsList.dart  SideMenu.dart  TopicTile.dart  TopicsLayout.dart  TopicsList.dart  UserButton.dart  UserDrawer.dart
frontend/pixel_flutter_web/lib/flutter_bloc/: pubspec.yaml
frontend/pixel_flutter_web/lib/models/: Category.dart  Post.dart  Topic.dart  TopicWithPost.dart  User.dart
frontend/pixel_flutter_web/lib/style/: colors.dart  text.dart
frontend/pixel_flutter_web/lib/views/: AutenticationPage.dart  HomePage.dart  InputPage.dart  TopicPage.dart  TopicsPage.dart
frontend/pixel_flutter_web/web/: main.dart
frontend/svelte/: README.md  package-lock.json  package.json
frontend/svelte/src/: App.svelte  main.js
frontend/web/: .env_sample  .gitignore  package-lock.json  package.json
frontend/web/src/: App.vue  main.js  router.js
frontend/web/src/components/: AuthDialog.vue  AvatarIcon.vue  Loading.vue  Profile.vue  SearchBar.vue  StoreItemCard.vue  StoreItems.vue  TrophyListItem.vue  UserMenu.vue
frontend/web/src/views/: AddPost.vue  Home.vue  MyPage.vue  People.vue  Store.vue  Talk.vue  Topic.vue
hooks/: auth.js  authHooks.js  cacheHooks.js  post.js  postHooks.js  topicHooks.js  user.js  userHooks.js
legacy/hooks/: topic.js  user.js
legacy/plugins/post/: index.js  schemas.js
legacy/plugins/topic/: index.js  service.js
migrations/2019-03-16-065613_users/: down.sql  up.sql
migrations/2019-04-23-052826_database/: down.sql  up.sql
models/db/: user.js
plugins/cache/: service.js
plugins/file/: index.js  schemas.js  service.js
plugins/post/: index.js  schemas.js  service.js
plugins/test/: index.js
plugins/topic/: index.js  schemas.js  service.js
plugins/user/: index.js  schemas.js  service.js
src/: app.rs  config.rs  errors.rs  main.rs  models.rs  schema.rs
src/example/: basic.rs
src/handler/: admin.rs  asynctest.rs  auth.rs  cache.rs  cache_update.rs  category.rs  data.rs  db.rs  email.rs  login.rs  messenger.rs  mod.rs  post.rs  psn.rs  register.rs  stream.rs  talk.rs  topic.rs  topic_async.rs  user.rs  user_async.rs
src/model/: actors.rs  admin.rs  cache.rs  cache_schema.rs  cache_update.rs  category.rs  channel.rs  common.rs  db.rs  db_schema.rs  errors.rs  mail.rs  messenger.rs  mod.rs  post.rs  psn.rs  response.rs  runtime.rs  talk.rs  topic.rs  types.rs  user.rs
src/router/: admin.rs  auth.rs  category.rs  mod.rs  post.rs  psn.rs  stream.rs  talk.rs  test.rs  topic.rs  user.rs
src/ulti/: initIds.rs  init_ids.rs  mod.rs
src/util/: env.rs  executor_compat.rs  hash.rs  init_ids.rs  jwt.rs  mod.rs  startup.rs  validation.rs
util/: fastJSON.js  fastStringify.js  salthash.js  sortIds.js
(+81 files in other folders)
