[package]
name = "pixel_social"
version = "0.4.0"
authors = ["fakeshadow <24548779@qq.com>"]
edition = "2018"

[dependencies.actix-cors]
version = "0.3.0-alpha.1"

[dependencies.actix]
version = "0.10.0-alpha.2"

[dependencies.actix-files]
#version = "0.2.1"
git = "https://github.com/actix/actix-web"

[dependencies.actix-multipart]
#version = "0.2.0"
git = "https://github.com/actix/actix-web"

[dependencies.actix-rt]
version = "1.1.0"

[dependencies.actix-web-actors]
#version = "2.0.0"
git = "https://github.com/actix/actix-web"

[dependencies.actix-web]
version = "3.0.0-alpha.1"

[dependencies.async-std]
version = "1.5.0"

[dependencies.base64]
version = "0.10.1"

[dependencies.bcrypt]
version = "0.4.0"

[dependencies.chrono]
version = "0.4.11"
default-features = false
features = [ "serde" ]

[dependencies.derive_more]
version = "0.15.0"

[dependencies.dotenv]
version = "0.14.1"

[dependencies.env_logger]
version = "0.6.1"

[dependencies.futures]
version = "0.3.4"
default-features = false

[dependencies.hashbrown]
version = "0.6.2"

[dependencies.heng_rs]
git = "https://github.com/fakeshadow/heng_rs.git"

[dependencies.hyper]
version = "0.13.4"
default-features = false

[dependencies.hyper-tls]
version = "0.4.1"

[dependencies.jsonwebtoken]
version = "7.1.0"

[dependencies.lazy_static]
version = "1.4.0"

[dependencies.lettre]
version = "0.9.2"

[dependencies.lettre_email]
version = "0.9.2"

[dependencies.rand]
version = "0.7.2"

[dependencies.redis]
version = "0.15.1"
default-features = false
features = ["tokio-rt-core"]

[dependencies.redis_tang]
git = "https://github.com/fakeshadow/tang_rs"

[dependencies.regex]
version = "1.3.1"

[dependencies.serde]
version = "1.0.106"
default-features = false

[dependencies.serde_derive]
version = "1.0.106"

[dependencies.serde_json]
version = "1.0.51"

[dependencies.serde_urlencoded]
version = "0.6.1"

[dependencies.tokio]
version = "0.2.16"
default-features = false
features = [ "fs" ]

[dependencies.tokio-postgres]
version = "0.5.3"
features = [ "with-chrono-0_4" ]

[dependencies.tokio_postgres_tang]
git = "https://github.com/fakeshadow/tang_rs"

[dependencies.psn_api_rs]
git = "https://github.com/fakeshadow/psn_api_rs.git"

[dependencies.uuid]
version = "0.7.4"
default-features = false
features = [ "v4" ]

[profile.release]
lto = true
opt-level = 3
codegen-units = 1