[package]
name = "pixel_social"
version = "0.4.0"
authors = ["fakeshadow <24548779@qq.com>"]
edition = "2018"

[dependencies]
actix = "0.10.0-alpha.2"
actix-cors = "0.3.0-alpha.1"
actix-files = { git = "https://github.com/actix/actix-web.git" }
actix-multipart = { git = "https://github.com/actix/actix-web.git" }
actix-rt = "1.1.1"
actix_send = { git = "https://github.com/fakeshadow/actix_send.git", default-features = false, features = ["actix-runtime"] }
actix-web = { version = "3.0.0-beta.1", features = ["openssl"] }
actix-web-actors = { git = "https://github.com/actix/actix-web.git" }
base64 = "0.10.1"
bcrypt = "0.4.0"
chrono = { version = "0.4.11", default-features = false, features = ["serde"] }
derive_more = "0.15.0"
dotenv = "0.14.1"
env_logger = "0.6.2"
futures = { version = "0.3.5", default-features = false }
hashbrown = "0.6.2"
hyper = { version = "0.13.7", default-features = false }
hyper-tls = "0.4.3"
jsonwebtoken = "7.2.0"
lettre = "0.9.2"
lettre_email = "0.9.2"
once_cell = "1.4.0"
parking_lot = "0.11.0"
rand = "0.7.2"
redis = { version = "0.16.0", default-features = false, features = ["tokio-rt-core"] }
redis_tang = { git = "https://github.com/fakeshadow/tang_rs.git", branch = "lock-free" }
regex = "1.3.1"
serde = { version = "1.0.106", default-features = false }
serde_derive = "1.0.106"
serde_json = "1.0.51"
serde_urlencoded = "0.6.1"
tokio = { version = "0.2.22", default-features = false, features = ["fs"] }
tokio-postgres = { version = "0.5.5", features = ["with-chrono-0_4"] }
tokio_postgres_tang = { git = "https://github.com/fakeshadow/tang_rs.git", branch = "lock-free" }
psn_api_rs = { git = "https://github.com/fakeshadow/psn_api_rs.git" }
uuid = { version = "0.7.4", default-features = false, features = ["v4"] }

[profile.release]
lto = "fat"
opt-level = 3
codegen-units = 1
